Update rectication photo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="header-title">
     <h1>
         <span>
-            <button type="button" class="btn animate-btn">JUST CODE IT!</button>
+           <button type="button" class="btn animate-btn">JUST CODE IT!</button>
         </span>
     </h1>
     <h2 class="animate-subtitle">Mon portfolio</h2>
@@ -57,7 +57,9 @@
     <main>
         <!--item--> <!--ma section a propos-->
  <section id="projet">
-    <h2 class="text-center">Expériences Professionnelles</h2>
+    <!-- <h2 class="text-center">Expériences Professionnelles</h2> -->
+    <h2 class="text-center custom-title">Expériences Professionnelles</h2>
+
     <div id="liste">
         <!-- Article 1 -->
         <article>
@@ -112,7 +114,7 @@
 
         <!--item--> <!--ma section projet(Réalisation)-->
         <section id="projet">
-            <h2 class="text-center">Diplômes et Formation</h2>
+            <h2 class="text-center custom-title">Diplômes et Formations</h2>
             <div id="liste">
                 <div class="d-flex"><!--Conteneur flex-->
                    
@@ -166,10 +168,11 @@
             </div> -->
 
         <section id="contact-section" class="py-5">
+             <h2 class="text-center custom-title">Contact</h2>
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-6 mb-4">
-                        <h2 class="mb-4">Contact</h2>
+                        <!-- <h2 class="mb-4">Contact</h2> -->
 
                         <img class="" src="public/img/contact.png" alt="">
 
