--- a/index.html
+++ b/index.html
@@ -88,45 +88,46 @@
         <!-- Article 1 -->
         <article>
             <div class="img-placeholder">
-                <img src="public/images/Site-web-Adaptel.png" alt="Parcours Adaptel" onerror="this.style.display='none'">
+                <img src="public/images/photoweb.jpg" alt="Parcours Adaptel" onerror="this.style.display='none'">
             </div>
-            <h3>Depuis 01/2023 Développeur web bénévole CZ RIDEC Malakoff (Paris)</h3>
+            <h3>Depuis 2023 Développeur web Benevole R.I .D.E.C 92240 paris </h3>
+            
             <ul>
-                <li>Gestion complète du site internet de l’association sur WordPress.</li>
-                <li>Optimisation au référencement SEO et SEA.</li>
-                <li>Personnalisation des thèmes WordPress.</li>
-                <li>Traitement des images sur GIMP et intégration du contenu multimédia du site.</li>
+                <li class="custom-text-size">Supervision complète du site internet de l'association, de la phase de conception à la réalisation sur WordPress.</li>
+                <li class="custom-text-size">Collaboration étroite avec les propriétaires du site pour garantir la conformité aux attentes.</li>
+                <li class="custom-text-size">Personnalisation avancée de thèmes WordPress : Adaptation des thèmes en fonction des besoins spécifiques du projet pour un rendu professionnel et unique.</li>
+                <li class="custom-text-size">Assurer le maintien et le suivi du projet pour garantir sa pérennité, en restant disponible pour intervenir et répondre aux besoins éventuels.</li>
             </ul>
         </article>
 
         <!-- Article 2 -->
         <article>
             <div class="img-placeholder">
-                <img src="public/images/Site-web-Adaptel.png" alt="Parcours Adaptel" onerror="this.style.display='none'">
+                <img src="public/images/hotel.jpg" alt="Parcours Adaptel" onerror="this.style.display='none'">
             </div>
-            <h3>De 05/2023 à 05/2024 Serveur Chez « Intérim Adaptél » 75015 Paris</h3>
-            <ul>
-                <li>Extra direct Room Service chez « Grand Hôtel Intercontinental de Paris » et « L’Hôtel Du Collectionneur ».</li>
-                <li>Gérer les encaissements et les décaissements du jour.</li>
-            </ul>
+            <h3>Maître d'hôtel Intérim Adaptel 75015   Hôtel Intercontinental 75011 Paris</h3>
+                <ul>
+                    <li class="custom-text-size">Assurer un service haut de gamme en restauration et room service, répondant aux attentes d’une clientèle exigeante avec le raffinement et la précision d’un service 5 étoiles.</li>
+                    <li class="custom-text-size">Supervise le maintien et le suivi des opérations, en assurant la prise des commandes, l’organisation des plannings et la coordination des équipes, tout en garantissant une qualité de service irréprochable.</li>
+                    <li class="custom-text-size">Organisation quotidienne de l’équipe pour assurer un service fluide et ponctuel et apprécié des clients.</li>
+                </ul>
         </article>
          <article> <!--item-->
                         <div class="img-placeholder">
-                            <img src="public/images/Site-web-Adaptel.png" alt="Parcours Adaptel" onerror="this.style.display='none'">
+                            <img src="public/images/octopus.jpg" alt="Parcours Adaptel" onerror="this.style.display='none'">
                         </div>
-                        <h3>Depuis 01/ 2023 Developpeur web benevole CZ RIDEC Malakoff (PARIS)</h3>
+                        <h3>Chef de Rang | OCTOPUS 92800 | Puteaux</h3>
                         <ul>
                             <li>Gestion complète du site internet de l’association sur WordPress.</li>
                             <li>Optimisation au référencement SEO ET SEA.</li>
                             <li>Optimisation au référencement SEO ET SEA.</li>
                             <li>La Personnalisation des thèmes WordPress.</li>
-                            <li>Traitement des images sur GIMPet Intégration du contenu Multimédia du site.</li> 
-                            
+                            <li>Traitement des images sur GIMPet Intégration du contenu Multimédia du site.</li>        
                         </ul>
                     </article>
                     <article> <!--item-->
-                        <img src="public/images/Site-web-Adaptel.png" alt="parcours_adaptel">
-                        <h3>De 05/ 2023 à 05/ 2024 Serveur Chez « Intérim Adaptél » 75015 Paris</h3>
+                        <img src="public/images/emigre.jpeg" alt="parcours_adaptel">
+                        <h3>Stagiaire  | CBAO KIDIRA SENEGAL</h3>
                         <p>
                             <li>Extra direct Room Service chez « Grand Hôtel Intercontinental de Paris » &« L’Hôtel
                                 Du Collectionneur ».</li>
