Update amelioration portefolio

--- a/index.html
+++ b/index.html
@@ -176,132 +176,44 @@
 
 <!-- 6- La section pour réaliser un effet parallax -->
     <div id="parallax-div"></div>
-
-    <!-- 7- La section de témoignages -->
-    <section id="review-section">
-      <h2>Quelques témoignages</h2>
-      <div class="container">
-        <div class="card">
-          <div class="img-div">
-            <img src="public/images/user-frame-33.png" alt="" />
-          </div>
-          <div class="content-div">
-            <h5>Nina</h5>
-            <p>
-              J’adore la manière dont ce blog aborde des sujets complexes avec des exemples concrets. Même si certains articles pourraient être un peu plus détaillés, l’ensemble reste excellent !
-            </p>
-            <div class="stars-div">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+        <!--Troisiième tranche-->
+        <div id="liste">
+            <div class="d-flex"><!--Conteneur flex-->
+                <article> <!--item-->
+                    <img src="assets/img/weight-loss@2x.png" alt="">
+                    <h3>Aspiration du futur</h3>
+                    <p>Je me vois évoluer en tant que développeur full-stack dans une entreprise technologique innovante, avec l'ambition de contribuer à des projets d'impact mondial.</p>
+                </article>
+                <article> <!--item-->
+                    <img src="assets/img/phone-heart@2x.png" alt="">
+                    <h3>Technologies ou compétences à maîtriser</h3>
+                    <p>je souhaite maîtriser l’architecture logicielle pour des systèmes à grande échelle</p>
+                </article>
+                <article> <!--item-->
+                    <img src="assets/img/referee@2x.png" alt="">
+                    <h3> Engagement envers une cause ou un secteur</h3>
+                    <p>Je suis motivé par l’idée de développer des solutions en fonction des besoins du client.</p>
+                </article>
+                <article> <!--item-->
+                    <img src="assets/img/resistance-band@2x.png" alt="">
+                    <h3>Contributions à ma communauté</h3>
+                    <p>Je souhaite devenir mentor pour de jeunes développeurs et contribuer à des projets open-source pour rendre la technologie accessible à tous.</p>
+                </article>
+                <article> <!--item-->
+                    <img src="assets/img/boxing-glove@2x.png" alt="">
+                    <h3>Création ou gestion de projets personnels</h3>
+                    <p>Mon objectif est de créer ma propre startup dans les 5 prochaines années, en développant des applications orientées vers la santé et le bien-être</p>
+                </article>
+                <article> <!--item-->
+                    <img src="assets/img/bath-tub@2x.png" alt="">
+                    <h3>Objectifs à long terme dans ta carrière</h3>
+                    <p>À long terme, je vise à devenir un leader technique, en dirigeant des équipes internationales pour résoudre des problématiques complexes.</p>
+                </article>
             </div>
-          </div>
         </div>
-        <div class="card">
-          <div class="img-div">
-            <img src="public/images/user-frame-33.png" alt="" />
-          </div>
-          <div class="content-div">
-            <h5>Martin</h5>
-            <p>
-                J'ai découvert ce blog par hasard en cherchant des conseils sur la création de sites web, et je ne pouvais pas rêver mieux !
-            </p>
-            <div class="stars-div">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="img-div">
-            <img src="public/images/user-frame-33.png" alt="" />
-          </div>
-          <div class="content-div">
-            <h5>Sophie</h5>
-            <p>
-              Ce blog est une mine d’or pour toute personne intéressée par la création de sites web. Les articles sont clairs, bien structurés et remplis d’astuces que j’ai pu appliquer directement. Bravo pour ce travail incroyable !
-            </p>
-            <div class="stars-div">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-      <section id="contact-section" class="py-5">
-             <h2 class="text-center custom-title">Contactez-moi</h2>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-6 mb-4">
-                        <!-- <h2 class="mb-4">Contact</h2> -->
 
-                        <img class="" src="public/img/contact.png" alt="">
-
-                        <div class="adresse-div">
-                            <address class="text-start"> 
-                            <h2><i class="fa-regular fa-user"></i> : Dabo Hamidou</h2>
-                            <h2><i class="fa-solid fa-phone"></i> : 07 60 32 90 21</h2>
-                            <h2><i class="fa-brands fa-usps"></i> : 75019 Paris</h2>
-                            <h2><i class="fa-solid fa-square-envelope"></i> : hamidoudabo12@gmail.com</h2>
-                        <div class="icons-div">
-                            <a href="" class="fab fa-facebook-f"></a>
-                            <a href="" class="fab fa-twitter"></a>
-                            <a href="" class="fab fa-instagram"></a>
-                        </div>
-        </div>
-                            </address>
-                        </div>
-                        
-
-                        <div class="text-center">
-                            <a href="#" class="mx-3">
-                                <img src="public/img/logo-facebook.png" alt="">
-                            </a>
-
-                            <a href="#" class="mx-3">
-                                <img src="public/img/logo-instagram.png" alt="">
-                            </a>
-                            <a href="#" class="mx-3">
-                                <img src="public/img/logo-messenger.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-lg-6">
-                        <form action="/submit_form" method="POST">
-                            <div class="mb-4">
-                                <input type="text" class="form-control" id="name" name="name" required
-                                    placeholder="Nom">
-                            </div>
-                            <div class="mb-3">
-
-                                <input type="email" class="form-control" id="email" name="email" required
-                                    placeholder="Email">
-                            </div>
-                            <div class="mb-3">
-
-                                <textarea class="form-control" id="message" name="message" rows="4" required
-                                    placeholder="Message"></textarea>
-                            </div>
-                            <div class="text-center sumbit">
-                                <button type="submit" class="btn btn-primary w-20">Envoyer</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
         <section id="map-div" class="py-5">
-           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.9718451151407!2d2.399650275135072!3d48.877813271334816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66da3541d3fdb%3A0x24822fc4f89f6dbd!2sH%C3%B4pital%20Robert%20Debr%C3%A9%20AP-HP!5e0!3m2!1sfr!2sfr!4v1734999085467!5m2!1sfr!2sfr" width="95%"
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.9718451151407!2d2.399650275135072!3d48.877813271334816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66da3541d3fdb%3A0x24822fc4f89f6dbd!2sH%C3%B4pital%20Robert%20Debr%C3%A9%20AP-HP!5e0!3m2!1sfr!2sfr!4v1734999085467!5m2!1sfr!2sfr" width="98%"
             height="450"
            style="border:0;" 
            allowfullscreen="" 
@@ -310,11 +222,77 @@
         </iframe>
         </section>
 
-
     </main>
   
-      <footer class="footer">
+      <!-- <footer class="footer">
         <p class="fs-4">Copyright &#x00A9; 2025 Dabo Hamidou. Tous droits réservés.</p>
+    </footer>
+     -->
+      <footer id="contact-section">
+        <div class="container d-flex"><!--Conteneur flex-->
+            <div class="col-left"> <!--item-->
+                <a href="index.html">
+                    <img src="public/images/hacker-5485843_1280.webp" alt="logo">
+                </a>
+                <p class="fs-2">Vous pouvez me suivre sur les réseaux sociaux pour découvrir mes projets, 
+                    échanger des idées.
+                </p>
+                <p id="rs">
+                    <a href="">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </p>
+            </div>
+            <form action="#" method="post"> <!--item-->
+                <h3 class="fs-2">Me contacter</h3>
+                <p class="fs-2">
+                    Vous avez un projet ou une idée en tête? 
+                    je serais ravi de discuter avec vous. N’hésitez pas à me contacter!
+                </p>
+                <div class="fs-2">
+                    <input type="text" placeholder="Nom" name="nom" value="">
+                </div class="fs-2">
+                <div class="fs-2">
+                    <input type="email" placeholder="Email" name="email" value="">
+                </div>
+                <div class="fs-2">
+                    <button type="submit">Envoyer</button>
+                </div>
+            </form>
+            <div class="col-right"> <!--item-->
+                <ul>
+                    <li class="d-flex"> <!--Conteneur flex-->
+                        <i class="fas fa-map-marker-alt fs-2"></i> <!--item-->
+                        <div> <!--item-->
+                            <h3 class="text-white fs-2">Adresse</h3>
+                            <p class="text-white fs-2">Paris 19<br></p>
+                        </div>
+                    </li>
+                    <li class="d-flex"> <!--Conteneur flex-->
+                        <i class="fas fa-phone-alt fs-2"></i> <!--item-->
+                        <div> <!--item-->
+                            <h3 class="text-white fs-2">Téléphone</h3>
+                            <a href="tel:+33 7 60 32 90 21" class="fs-2">+33 7 60 32 90 21
+
+                            </a>
+                        </div>
+                    </li>
+                    <li class="d-flex"> <!--Conteneur flex-->
+                        <i class="fas fa-envelope fs-2"></i> <!--item-->
+                        <div> <!--item-->
+                            <h3 class="text-white fs-2" ">Mail</h3>  
+                            <a href="mailto:toto@lasalle.com" class="fs-2">hamidoudabo12.com</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
 
